--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,6 @@
 @import url('custom-slots.css');
+@import url('header.css');
+@import url('front-page.css');
 
 /* General styles */
 
@@ -208,210 +210,4 @@ input{
 
 .container {
   padding: 0 16px;
-}
-
-/* header */
-
-.header {
-  position: sticky;
-  left: 0;
-  top: 0;
-  width: 100%;
-  z-index: 100;
-  background-color: rgba(26, 26, 42, 1);
-  height: 56px;
-}
-
-/* front-page */
-
-.banner-section .container {
-  padding: 0;
-}
-@media screen and (min-width: 769px) {
-  .banner-section .container {
-    padding: 0 16px;
-  }
-}
-
-.swiper {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  height: 300px;
-}
-
-@media screen and (min-width: 769px) {
-  .swiper {
-    border-radius: 24px;
-  }
-}
-
-.swiper-slide {
-  position: relative;
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide__img {
-  height: 100%;
-  overflow: hidden;
-}
-
-.swiper-slide__img img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.swiper-slide__text {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  color: #fff;
-  max-width: 343px;
-  padding: 40px 16px;
-  text-align: left;
-}
-
-@media screen and (min-width: 769px) {
-  .swiper-slide__text {
-    padding: 40px 32px;
-  }
-}
-
-@media screen and (min-width: 1201px)  {
-  .swiper-slide__text {
-    padding: 20px 56px;
-    max-width: 400px;
-  }
-}
-
-.swiper-slide__text h3 {
-  font-family: "Roboto", sans-serif;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 1;
-}
-
-.swiper-slide__text h2 {
-  font-family: "Oswald", sans-serif;
-  transform: scaleX(1.5);
-  font-size: 28px;
-  font-weight: bold;
-  letter-spacing: -2px;
-  margin: 20px 0 20px 63px;
-  padding-right: 50px;
-}
-
-@media screen and (min-width: 769px) {
-  .swiper-slide__text h2 {
-    margin: 40px 0 40px 50px;
-    padding-right: 0;
-  }
-}
-
-.swiper-slide__text p {
-  font-family: "Roboto", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-}
-
-.swiper-slide__button {
-  padding: 12px 20px;
-  margin-top: 40px;
-  width: 100%;
-  max-width: 153px;
-  height: 100%;
-  max-height: 48px;
-  font-size: 16px;
-  font-weight: 700;
-  font-family: "Roboto", sans-serif;
-  line-height: 24px;
-  background: linear-gradient(180deg, #ffe896 0%, #c08c1a 99.84%);
-  color: #11111b;
-  border: none;
-  letter-spacing: 0.2px;
-  border-radius: 8px;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* Banner swiper pagination */
-.banner-pagination {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  z-index: 50;
-  margin-bottom: 16px;
-}
-
-.banner-pagination span {
-  width: 100%;
-  max-width: 28px;
-  height: 4px;
-  background: rgba(255, 255, 255, 0.4);
-  opacity: 1;
-  border-radius: 17px;
-}
-
-.banner-pagination .swiper-pagination-bullet-active {
-  background-color: #f7c649;
-}
-
-
-/* Banner swiper navigation */
-.banner-navigation {
-  display: none;
-}
-
-@media screen and (min-width: 661px) {
-  .banner-navigation {
-    display: flex;
-  }
-}
-
-.arrow-next,
-.arrow-prev {
-  position: absolute;
-  top: calc(50% - 24px);
-  width: 50px;
-  height: 50px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 50%; 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 10;
-  cursor: pointer;
-}
-
-.arrow-next {
-  right: 15px; 
-}
-
-.arrow-prev {
-  left: 15px; 
-
-}
-
-.arrow-next svg,
-.arrow-prev svg {
-  width: 24px;
-  height: 24px;
-  fill: #fff; 
-}
-
-.arrow-next:hover,
-.arrow-prev:hover {
-  background-color: rgba(0, 0, 0, 0.7);
 }
